objects/Case_Runner__c.object
<CustomObject>
    <fields>
        <fullName>ALERT__c</fullName>
        <defaultValue>&quot;COMMENTS ENTERED BELOW GO TO THE CUSTOMER&quot;</defaultValue>
        <externalId>true</externalId>
        <label>ALERT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_l_Notes__c</fullName>
        <description>Haystak Additional Notes</description>
        <label>Add&apos;l Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Runners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Case__r.Business_Unit__c</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Assignee_Email_Address__c</fullName>
        <label>CR Assignee Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Email_Address__c</fullName>
        <inlineHelpText>used to send notifications when a case is escalated to Level 2 or3</inlineHelpText>
        <label>Case Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Case Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Billing	Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service RO&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Adminstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vincamera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website	Checked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <inlineHelpText>Client Configuration Issue = settings not correct, Request - approve bulk email disbribution, global access.  System Defect = Dealer Issue, Training Issue- customer did not know how to use the system.</inlineHelpText>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Settings - Support Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import/Export Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Feature Request Logged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request - Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Support Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Support Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Runners</relationshipLabel>
        <relationshipName>Case_Runners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Copy__c</fullName>
        <description>Haystak Copy</description>
        <label>Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Manager__c</fullName>
        <formula>CreatedBy.Reports_To__c</formula>
        <inlineHelpText>formula field that reads the manager name of the person who created the case runner</inlineHelpText>
        <label>Created by Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Queue_Resolve__c</fullName>
        <inlineHelpText>When a Case is resolved, record the queue it was in when it was resolved</inlineHelpText>
        <label>Update Current Q L3 Web Resolve</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Queue__c</fullName>
        <formula>Case__r.Escalation_Queue__c</formula>
        <inlineHelpText>Formula field that reads the current queue the Case is in and makes it visible on the case runner</inlineHelpText>
        <label>Current Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Create_to_Escalate__c</fullName>
        <formula>CreatedDate - Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that calculates the days from date Case opened to date escalate case runner created</inlineHelpText>
        <label>Days Create to Escalate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Website__c</fullName>
        <formula>Case__r.Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_has_a_logo__c</fullName>
        <description>Haystak Dealer Logo</description>
        <label>Dealer has a logo</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Feature_Rejected__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>workflow updates the number to 1 when a defect is rejected</inlineHelpText>
        <label>Defect/Feature Rejected</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defect_Id__c</fullName>
        <label>Defect Id#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_TFS_Push_URL__c</fullName>
        <description>When someone escalates a case to Development, they will then click the Push to TFS button. That button calls a link that is formulaically generated here.</description>
        <formula>IF( 
   ISPICKVAL(Escalated_To__c, &quot;Development&quot;), 
   &quot;http://sdbvtfspr-mts01:8080/tfs/VinSolutionsCollection/VinSolutions/&quot; &amp; 
CASE(Escalation_Type__c, 
   &quot;Data Import Problem / Customer Data Issue&quot;, 
      &quot;CRM%20Delta/_workItems/create/Bug?&amp;%5BSystem.AssignedTo%5D=Scarfino%2C+Grant+(Vin)&amp;%5BMicrosoft.VSTS.Common.BacklogPriority%5D=100&amp;%5BSalesForce.CaseNumber%5D=&quot; &amp; Case__r.CaseNumber &amp; &quot;&amp;%5BSystem.IterationPath%5D=VinSolutions%5CCRM+Delta&amp;%5BSystem.AreaPath%5D=VinSolutions%5CCRM&amp;%5BSystem.Title%5D=&quot;, 
   &quot;Dealer Sites&quot;, 
      &quot;DS%20Vin%20Websites%20and%20GST/_workItems/create/Bug?%5BSystem.AssignedTo%5D=Resco%2C+Karen+(Vin)&amp;%5BMicrosoft.VSTS.Common.BacklogPriority%5D=100&amp;%5BSalesForce.CaseNumber%5D=&quot; &amp; Case__r.CaseNumber &amp; &quot;&amp;%5BSystem.IterationPath%5D=VinSolutions%5CDealerSites%5CClassic+and+GST&amp;%5BSystem.AreaPath%5D=VinSolutions%5CDealerSites%5CClassic&amp;%5BSystem.Title%5D=&quot;, 
   &quot;Defect - Anomalous Behavior&quot;, 
      &quot;CRM%20Delta/_workItems/create/Bug?%5BSystem.AssignedTo%5D=Scarfino%2C+Grant+(Vin)&amp;%5BMicrosoft.VSTS.Common.BacklogPriority%5D=100&amp;%5BSalesForce.CaseNumber%5D=&quot; &amp; Case__r.CaseNumber &amp; &quot;&amp;%5BSystem.IterationPath%5D=VinSolutions%5CCRM+Delta&amp;%5BSystem.AreaPath%5D=VinSolutions%5CCRM&amp;%5BSystem.Title%5D=&quot;, 
   &quot;Defect - Error Produced&quot;, 
      &quot;CRM%20Delta/_workItems/create/Bug?&amp;%5BSystem.AssignedTo%5D=Scarfino%2C+Grant+(Vin)&amp;%5BMicrosoft.VSTS.Common.BacklogPriority%5D=100&amp;%5BSalesForce.CaseNumber%5D=&quot; &amp; Case__r.CaseNumber &amp; &quot;&amp;%5BSystem.IterationPath%5D=VinSolutions%5CCRM+Delta&amp;%5BSystem.AreaPath%5D=VinSolutions%5CCRM&amp;%5BSystem.Title%5D=&quot;, 
   &quot;Dev-Only Task&quot;, 
      &quot;CRM%20Delta/_workItems/create/Bug?%5BSystem.AssignedTo%5D=Scarfino%2C+Grant+(Vin)&amp;%5BMicrosoft.VSTS.Common.BacklogPriority%5D=100&amp;%5BSalesForce.CaseNumber%5D=&quot; &amp; Case__r.CaseNumber &amp; &quot;&amp;%5BSystem.IterationPath%5D=VinSolutions%5CCRM+Delta&amp;%5BSystem.AreaPath%5D=VinSolutions%5CCRM&amp;%5BSystem.Title%5D=DEVTASK-&quot;, 
   &quot;Vendor Integration Issue&quot;, 
      &quot;CRM%20Delta/_workItems/create/Bug?&amp;%5BSystem.AssignedTo%5D=Scarfino%2C+Grant+(Vin)&amp;%5BMicrosoft.VSTS.Common.BacklogPriority%5D=100&amp;%5BSalesForce.CaseNumber%5D=&quot; &amp; Case__r.CaseNumber &amp; &quot;&amp;%5BSystem.IterationPath%5D=VinSolutions%5CCRM+Delta&amp;%5BSystem.AreaPath%5D=VinSolutions%5CCRM&amp;%5BSystem.Title%5D=&quot;, 
   &quot;NOT A VALID CHOICE - SEE SF ADMIN&quot; 
   ), 
   &quot;#&quot; 
)</formula>
        <label>Development TFS Push URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_verify_website_address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>before escalating to Website Support you must verify the web address the customer is reporting the issue on</inlineHelpText>
        <label>Did you verify website address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <description>Haystak Disclaimer</description>
        <label>Disclaimer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_our_Number_Show__c</fullName>
        <description>Haystak</description>
        <inlineHelpText>Haystak field - required when certain types are selected</inlineHelpText>
        <label>Does our Number Show?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>related to Haystak</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Category__c</fullName>
        <description>Haystak Error Tracking for Unresolve Runner Requests</description>
        <inlineHelpText>Why is this an Error?</inlineHelpText>
        <label>Error Category</label>
        <picklist>
            <controllingField>Unresolve_Result__c</controllingField>
            <picklistValues>
                <fullName>Proxy Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Build Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <label>Escalated To</label>
        <picklist>
            <picklistValues>
                <fullName>App Request Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Setup Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Support Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Creative Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Paid Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Tech Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jira Request Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1-Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-CRM Admin/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Escalations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Phone System(PBX)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalation_Type__c</fullName>
        <label>Escalation Type</label>
        <picklist>
            <controllingField>Escalated_To__c</controllingField>
            <picklistValues>
                <fullName>2014 Rebuild Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Copy Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Disapprovals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP3PA Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdWords Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken UA Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change/Update Existing Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler PAP Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Prospects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Campaign Modifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Problem / Customer Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Asset Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Creative Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Sites</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Release_Date__c</fullName>
        <label>Estimated Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Id__c</fullName>
        <label>Feature Request Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gatekeeper__c</fullName>
        <inlineHelpText>If the Case&apos;s Subject says &quot;Gatekeeper&quot; this field needs to be populated.</inlineHelpText>
        <label>Gatekeeper</label>
        <picklist>
            <picklistValues>
                <fullName>Astera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Source Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Setup Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Inventory Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intended Dealer Result</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Many manually entered vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial DMS File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Determine Cause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wandering Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Campaign_Type__c</fullName>
        <label>Haystak Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing General Used Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Generic Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Service and Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Only Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Mail Sponsored Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google General Used Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Generic Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Service and Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>You Tube Pre Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube TrueView</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Haystak Height</description>
        <label>Height</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_website_live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the website live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Years__c</fullName>
        <description>Haystak Model / Years</description>
        <label>Model / Years</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Haystak Offer</description>
        <label>Offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_for_Ads__c</fullName>
        <inlineHelpText>related to Haystak Creative Requests</inlineHelpText>
        <label>Phone # for Ads</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portal_Job_Number__c</fullName>
        <description>Haystak Portal Job Number</description>
        <label>Portal Job Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>Haystak</description>
        <inlineHelpText>related to Haystak Creative Requests</inlineHelpText>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler NON-PAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <inlineHelpText>related to Haystak Creative Requests when the Chrysler program type  is selected</inlineHelpText>
        <label>Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>Big Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Event - Generic Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ram Truck Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showcase Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minivan Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ram Commercial Truck Season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Clearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep Celebration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ram Powerdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler T&amp;C Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Center Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award Season Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QC_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who is assigned to QC this Case. Used by Haystak.</description>
        <inlineHelpText>The person who is assigned to QC this Case. Used by Haystak.</inlineHelpText>
        <label>QC Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Runners1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Issue__c</fullName>
        <description>Used by Haystak to denote recurring issues for Tech Ops and Paid Ops?</description>
        <label>Recurring Issue</label>
        <picklist>
            <controllingField>Escalated_To__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolve_Queue__c</fullName>
        <inlineHelpText>Workflow updates the queue the Case was in when the resolve case runner was created- for reporting</inlineHelpText>
        <label>Resolve Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Runner_Action__c</fullName>
        <label>Runner Action</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Dev Work to Do</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolve/Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved from Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitting Additional Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>